# diffy

./: .gitignore  CLAUDE.md  README.md  build.sh  package-lock.json  package.json  runDev.sh  vitest.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  watcher.rs
src-tauri/src/ai/: client.rs  types.rs
src-tauri/src/commands/: ai.rs  diff.rs  git.rs  mod.rs  watcher.rs
src-tauri/src/git/: diff.rs  mod.rs  repo.rs  types.rs
src/lib/components/ai/: AiPanel.svelte
src/lib/components/diff/: DiffHeader.svelte  DiffHunk.svelte  DiffLine.svelte  DiffView.svelte  ExpandContext.svelte  FullFileDiff.svelte  ImageDiff.svelte  ScrollMap.svelte  SearchBar.svelte  SplitDiff.svelte  (+1 more)
src/lib/services/: ai.ts  git.ts
src/lib/stores/: ai.svelte.ts  debug.svelte.ts  diff.svelte.ts  palette.svelte.ts  recents.svelte.ts  repo.svelte.ts  repoPrefs.svelte.ts  reviewed.svelte.ts  settings.svelte.ts  toast.svelte.ts
src/lib/utils/: fileType.ts  focusTrap.ts  fuzzy.ts  highlighter.ts  keyboard.ts
src/routes/: +layout.svelte  +page.svelte
test-fixtures/: Makefile  demo.c  demo.clj  demo.cpp  demo.cs  demo.css  demo.dart  demo.erl  demo.ex  demo.fs  demo.go  demo.graphql  demo.hbs  demo.hs  demo.html  demo.ini  demo.java  demo.js  demo.json  demo.jsx  demo.kt  demo.less  demo.lua  demo.md  demo.ml  demo.nix  demo.php  demo.pl  demo.py  demo.r  demo.rb  demo.rs  demo.scala  demo.scss  demo.sh  demo.sql  demo.svelte  demo.swift  demo.tf  demo.toml  (+5 more)
(+12 files in other folders)
